--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3304,6 +3304,7 @@ select:visited {
 }
 .ori-banner-content-4 .ori-banner-text-area h1 span {
   font-weight: 300;
+  color:#ff00fb; 
 }
 .ori-banner-content-4 .ori-banner-text-area p {
   color: #0B1C2A;
